switch over the creation of links in pub-hash from http to https; move the base URLs to config

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -30,7 +30,8 @@ PUBMED:
   LOG: log/pubmed.log
   FETCH_PATH: /entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
   BASE_URI: https://eutils.ncbi.nlm.nih.gov
-  
+  ARTICLE_BASE_URI: https://www.ncbi.nlm.nih.gov/pubmed/
+
 ## Sciencewire Auth Config
 SCIENCEWIRE:
   LOG: log/sciencewire.log
@@ -39,6 +40,8 @@ SCIENCEWIRE:
   LICENSE_ID: some-license-id
   RECOMMENDATION_PATH: /PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
   TMPDIR: /tmp
+  ARTICLE_BASE_URI: https://ws.isiknowledge.com/cps/openurl/service?url_ver=Z39.88-2004&rft_id=info:ut/
+  DOI_BASE_URL: https://dx.doi.org/
 
 HARVESTER:
   USE_MIDDLE_NAME: true
