--- a/fixtures/vcr_cassettes/pub_med_client_spec_returns_a_list.yml
+++ b/fixtures/vcr_cassettes/pub_med_client_spec_returns_a_list.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=211&id=589&id=591&id=960"
