--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_from_directory_of_wos_id_files/processes_only_bibtex_items_of_type_inproceedings.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_from_directory_of_wos_id_files/processes_only_bibtex_items_of_type_inproceedings.yml
@@ -159,7 +159,7 @@ http_interactions:
   recorded_at: Tue, 05 Apr 2016 23:39:08 GMT
 - request:
     method: post
-    uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: US-ASCII
       string: ''
@@ -199,7 +199,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE eEfetchResult
-        PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
+        PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"https://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
   recorded_at: Tue, 05 Apr 2016 23:39:08 GMT
